// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attribute Component - Snapshot Tests matches snapshot for default props 1`] = `
<button
  class="border-GRAY_400 hover:bg-BG_GRAY_2 active:bg-BG_GRAY_2 inline-flex items-center gap-1.5 rounded-md border px-2 py-1"
>
  <span
    class="text-BG_WHITE f-12-400 whitespace-nowrap"
  >
    Name
  </span>
  <span
    class="f-12-500 whitespace-nowrap text-black"
  >
    John Doe
  </span>
</button>
`;

exports[`Attribute Component - Snapshot Tests matches snapshot when disabled 1`] = `
<button
  class="border-GRAY_400 hover:bg-BG_GRAY_2 active:bg-BG_GRAY_2 inline-flex items-center gap-1.5 rounded-md border px-2 py-1"
  disabled=""
>
  <span
    class="text-BG_WHITE f-12-400 whitespace-nowrap"
  >
    Name
  </span>
  <span
    class="f-12-500 whitespace-nowrap text-black"
  >
    John Doe
  </span>
</button>
`;
